# DNA

./: CMakeLists.txt  Makefile  README.md
CMakeModules/: FindFREEGLUT.cmake
docker/: Dockerfile  README.md  build_image.sh  build_project_in_docker.sh  pull_image.sh
src/: dna.cpp
